# lingua-arrow

./: .gitignore  README.md  main.cpp  meson.build
include/larrow/base/: data_type.h  device_type.h
include/larrow/model/: model.h
include/larrow/tensor/: tensor.h
include/larrow/utils/: error.h  noncopyable.h
larrow/include/larrow/base/: allocator.h  storage.h
larrow/include/larrow/tensor/: tensor.h
larrow/include/larrow/utils/: debug.h  error.h  noncopyable.h
larrow/source/base/: alloc.cpp  allocator.cpp  storage.cpp
larrow/source/tensor/: tensor.cpp
src/base/: storage.cpp
src/tensor/: tensor.cpp
